<resources xmlns:tools="http://schemas.android.com/tools"
           xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">This Is Not Fake News</string>
    <string name="action_bar_title">@string/app_name</string>
    <string name="action_bar_subtitle">Latest World News</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="author">
        by <xliff:g name="author_name" example="John Johnson">%s</xliff:g>
    </string>
    <string name="read_more">Read More...</string>

    <!--TOPICS LIST FOR THE NAV BAR TITLES-->
    <string name="nav_bar_instructions">Browse The Guardian by topics or search below.</string>
    <string name="search_here">Search Here</string>

    <string name="title_region">Region</string>
    <string name="title_world">World</string>
    <string name="title_europe">Europe</string>
    <string name="title_us">US</string>
    <string name="title_asia">Asia</string>
    <string name="title_africa">Africa</string>
    <string name="title_middle_east">Middle East</string>
    <string name="title_south_america">South America</string>
    <string name="title_uk">UK</string>

    <string name="title_sport">Sport</string>
    <string name="title_football">Football</string>
    <string name="title_tennis">Tennis</string>

    <string name="title_finance">Finance</string>
    <string name="title_business">Business</string>
    <string name="title_money">Money</string>

    <string name="title_sci_tech">Science &amp; Technology</string>
    <string name="title_science">Science</string>
    <string name="title_technology">Technology</string>

    <string name="title_climate">Climate &amp; Environment</string>
    <string name="title_energy">Energy</string>
    <string name="title_environment">Environment</string>

    <string name="title_health_lifestyle">Health &amp; Lifestyle</string>
    <string name="title_lifestyle">Lifestyle</string>
    <string name="title_travel">Travel</string>
    <string name="title_culture">Culture</string>
    <string name="title_fashion">Fashion</string>
    <string name="title_health">Health</string>

    <string name="title_other">Other</string>
    <string name="title_opinion">Opinion</string>
    <string name="title_the_observer">The Observer</string>

    <!--PLACEHOLDER STRINGS-->
    <string name="placeholder_title">Donald Trump States \'Alternative Facts\'</string>
    <string name="placeholder_subtitle">
        Donald Trump has stated that the White House is doing \'tremendous\' work.
    </string>
    <string name="placeholder_author">by John Johnson</string>
    <string name="placeholder_date">Mon, 05 November 2017 08:03 AM</string>

    <!--STRINGS FOR DEALING WITH EXCEPTIONS -->
    <string name="url_exception">Problem with the request URL</string>
    <string name="response_code_exception" tools:ignore="PluralsCandidate">
        Error: <xliff:g name="response_code">%d</xliff:g> response code received
    </string>
    <string name="json_exception">Problem retrieving JSON correctly</string>
    <string name="parse_exception">Invalid date or problem with date formatting</string>
    <string name="http_request_exception">HTTP request error</string>
    <string name="no_network_connection">
        Error. No network connection or unable to connect to network.
    </string>
    <string name="null_pointer_exception">Error. No response code found.</string>
    <string name="keyboard_hide_exception">Error hiding keyboard</string>
    <string name="malformed_url_exception">Problem with the thumbnail URL</string>
    <string name="io_exception">Unknown IO exception</string>
    <string name="no_results">
        No articles found with the search term:
        <xliff:g name="search_term" example="Birdwatching">%s</xliff:g>.\nTry a different search.
    </string>
    <string name="empty_search">Enter a search term or choose one of the topics below.</string>

    <!--CONTENT DESCRIPTION STRINGS-->
    <string name="submit_button">Press this button to submit your search query</string>

</resources>
