<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_margin">

    <TextView
        android:id="@+id/article_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TitleStyle"
        android:paddingBottom="@dimen/list_item_view_padding"
        tools:text="@string/placeholder_title"/>

    <TextView
        android:id="@+id/article_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/article_title"
        android:textAppearance="@style/SubtitleStyle"
        android:paddingBottom="@dimen/list_item_view_padding"
        tools:text="@string/placeholder_subtitle"/>

    <TextView
        android:id="@+id/article_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/article_subtitle"
        android:textAppearance="@style/AuthorDateStyle"
        android:paddingBottom="@dimen/list_item_view_padding"
        tools:text="@string/author"/>

    <TextView
        android:id="@+id/article_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_author"
        android:textAppearance="@style/AuthorDateStyle"
        android:layout_alignParentStart="true"
        android:paddingBottom="@dimen/list_item_view_padding"
        tools:text="@string/placeholder_date"/>

    <TextView
        android:id="@+id/read_more_button"
        android:layout_below="@id/article_date"
        android:layout_alignParentEnd="true"
        android:drawableEnd="@drawable/submit"
        android:text="@string/read_more"
        style="@style/ReadMoreButtonStyle"/>

</RelativeLayout>